Fixed z-index title

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -350,7 +350,7 @@ background: linear-gradient(to bottom,
 }
 .ui-frame {
 position: absolute;
-z-index: 1;
+z-index: 2;
 top: 0;
 left: 0;
 width: 100vw;
